# shpalery

./: Cargo.toml  README.md
migrations/: 001_init.sql
src/: args.rs  config.rs  database.rs  lib.rs  main.rs  reddit.rs  wallpaper.rs
