[package]
name = "shpalery"
version = "0.1.0"
edition = "2018"

# authors = ["Mauricio Massa <mmassa2137@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "migrate" ] }
