[package]
authors = ["Mauricio Massa <mmassa2137@outlook.com>"]
description = "A reddit wallpaper downloader."
edition = "2018"
homepage = "https://github.com/elkrammer/shpalery"
license = "MIT/Apache-2.0"
name = "shpalery"
version = "0.1.0"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
colored = {version = "2.0" }
directories = { version = "2.0" }
figment = { version = "0.10", features = ["toml", "env"] }
rand = { version = "0.8.5" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sha2 = { version = "0.10" }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "migrate" ] }
tempfile = { version = "3" }
tokio = { version = "1", features = ["full"] }
